cluster/beehive/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: beehive-frontend
  name: beehive-frontend
  namespace: beehive
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: beehive-frontend
  template:
    metadata:
      labels:
        app: beehive-frontend
    spec:
      imagePullSecrets:
        - name: gitlab-token-beehive-frontend
      containers:
        - name: beehive-frontend
          image: registry.login.no/tekkom/web/beehive/frontend:4.3.3-dev
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: 3000tcp
              protocol: TCP
          livenessProbe:
           httpGet:
             path: /
             port: 3000
           initialDelaySeconds: 30
          periodSeconds: 10
          readinessProbe:
           httpGet:
             path: /
             port: 3000
           initialDelaySeconds: 5
           periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
              topologyKey: kubernetes.io/hostname
