cluster/beehive/frontend/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: beehive-frontend
  name: beehive-frontend
  namespace: beehive
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: beehive-frontend
  template:
    metadata:
      labels:
        app: beehive-frontend
    spec:
      imagePullSecrets:
        - name: gitlab-token-beehive-frontend
      containers:
        - name: beehive-frontend
          image: registry.login.no/tekkom/web/beehive/frontend:2.10.1-dev@sha256:3d396f1ae490c7e735386ed93a92d68d0678bca7a03042f85d34ee899b562326
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: 80tcp
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
              topologyKey: kubernetes.io/hostname
