cluster/beehive/frontend/frontend_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: beehive-frontend
  namespace: beehive
  labels:
    app: beehive-frontend
spec:
  type: ClusterIP
  selector:
    app: beehive-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
